# PP_recognise_files

./: pyproject.toml
app/: main.py  parsers.py  recognisers.py
